Fixed category page whitespace.

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@ body {
   background-image: url('./images/jeopardy_background.jpg'); 
   background-repeat: no-repeat;
   background-size: cover; 
-  -webkit-background-size: cover; 
+  /* -webkit-background-size: cover;  */
 }
